--- a/h.html
+++ b/h.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome SIR m</h1>
+    <h1>welcome to nik dev</h1>
+    <h2>update new commit</h2>
 </body>
-</html>
+</html> 
